--- a/src/assets/COMOPONANTS/repairs.css
+++ b/src/assets/COMOPONANTS/repairs.css
@@ -4,6 +4,10 @@
     width: 100%;
     background-repeat: no-repeat;
     background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end; /* نضبط العناصر في الأسفل */
+    padding-top: 50px; /* نضبط المساحة العلوية */
 }
 
 .Botn-Ground {
@@ -12,7 +16,6 @@
     max-width: 1000px;
     height: 350px;
     padding: 10px;
-    margin-top: 70px; /* غيرنا الـ margin عشان ننزل الخلفية لتحت */
 }
 
 .Botn-Ground h2 {
