--- a/src/assets/COMOPONANTS/footer.css
+++ b/src/assets/COMOPONANTS/footer.css
@@ -1,6 +1,8 @@
 footer {
     background: rgba(40, 54, 70, 1);
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   
   footer a {
@@ -10,7 +12,11 @@ footer {
   footer a.text-secondary {
     color: #6c757d !important;
   }
-  
+  #plurPhoto {
+ margin-right: 80%;
+
+    
+  }
   footer .input-group {
     max-width: 400px;
     margin-left: auto;
@@ -32,33 +38,33 @@ footer {
     background-color: #f5a623;
     color: white;
   }
-  .trtr{
+  
+  .trtr {
     display: flex;
     flex-direction: column;
-
-} 
-.trtr ul{
+  }
+  
+  .trtr ul {
     gap: 20px;
-
-} 
-
+  }
   
   footer .btn-subscribe:hover {
     background-color: #e5941f;
   }
- 
-  /* Hide ul on smaller screens */
+  
+  /* إخفاء ul على الشاشات الأصغر */
   @media (max-width: 767.98px) {
     .d-md-flex {
       display: none !important;
     }
-    #plurPhoto{
-     margin-left: 27%;
-     padding: 10px;
-    }
-    
   
-    /* Center text on smaller screens */
+    #plurPhoto {
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+    }
+  
+    /* توسيط النصوص على الشاشات الأصغر */
     footer .text-md-right {
       text-align: center !important;
     }
@@ -70,35 +76,110 @@ footer {
     footer .input-group {
       justify-content: center;
     }
-    #plurPhoto {
-        margin-right: 1rem;
-      }
-      .center-on-mobile {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-      }
+  
+    .center-on-mobile {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
   
-  /* Additional responsive styling */
-  @media (max-width: 991.98px) {
-    footer .input-group {
-      max-width: 100%;
-    }
-  
-    footer .input-group .form-control, footer .input-group .btn {
-      border-radius: 0;
-    }
-  
-    footer .form-control {
-      border-radius: 20px 0 0 20px;
-      
-    }
-   
-  
-    footer .input-group-append .btn {
-      border-radius: 0 20px 20px 0;
-    }
-    
+  /* تنسيق استجابة إضافي */
+/* إخفاء ul على شاشات التابلت والأيباد */
+@media (max-width: 991.98px) {
+  .d-md-flex {
+    display: none !important;
+  }
+
+  #plurPhoto {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+
+  footer .text-md-right {
+    text-align: center !important;
+  }
+
+  footer .text-md-left {
+    text-align: center !important;
+  }
+
+  footer .input-group {
+    justify-content: center;
+    max-width: 100%;
+  }
+
+  footer .form-control {
+    border-radius: 20px 0 0 20px;
+  }
+
+  footer .input-group-append .btn {
+    border-radius: 0 20px 20px 0;
+  }
+}
+
+/* إظهار ul على شاشات الأكبر */
+@media (min-width: 992px) {
+  .d-md-flex {
+    display: flex !important;
+  }
+
+  footer .input-group {
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: 0;
   }
   
+}
+/* إخفاء ul على شاشات التابلت والأيباد */
+@media (max-width: 991.98px) {
+  .d-md-flex {
+    display: none !important;
+  }
+
+  footer .input-group {
+    max-width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+  }
+
+  footer .form-control {
+    border-radius: 20px 0 0 20px;
+  }
+
+  footer .input-group-append .btn {
+    border-radius: 0 20px 20px 0;
+  }
+
+  footer p.mb-2 {
+    text-align: center;
+    width: 100%;
+  }
+  
+  #plurPhoto {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+
+  footer .text-md-right,
+  footer .text-md-left {
+    text-align: center !important;
+  }
+  .col-md-6.text-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .input-group {
+    width: 100%;
+    max-width: 400px;
+    justify-content: center;
+  }
+}
+
