--- a/src/assets/COMOPONANTS/power.css
+++ b/src/assets/COMOPONANTS/power.css
@@ -3,7 +3,6 @@ background-image: url('../IMGS/8116 1.svg');
 height: 70vh;
 width: 100%;
 background-position: center; /* وضع الخلفية في المنتصف */
-
 background-size: cover;
 margin-top: 30px;
 
@@ -35,9 +34,32 @@ margin-top: 30px;
 @media (max-width: 768px) {
     .POWER {
       height: 50vh; /* تعديل الارتفاع لتغطية الشاشة بالكامل */
+      background-size: cover;
+
     }
   
     .container {
       padding-top: 50px; /* تعديل الـ padding حسب الحاجة */
     }
   }
+  @media (max-width: 1024px) and (min-width: 798px) {
+
+.POWER{
+  margin: 5px;
+  width: 100%;
+}
+.POWER{
+  background-image: url('../IMGS/8116 1.svg');
+  height:40vh;
+  width: 100%;
+  background-position: center; /* وضع الخلفية في المنتصف */
+  
+  background-size: cover;
+  margin-top: 30px;
+  
+  }
+
+
+
+  }
+
