--- a/src/assets/COMOPONANTS/solar.css
+++ b/src/assets/COMOPONANTS/solar.css
@@ -3,6 +3,7 @@
 }
 .SECTIONS{
     margin-top: 40px;
+    
 }
 .LL{
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
@@ -41,7 +42,34 @@ font-size: 27px;
         margin: 0;
 
     }
+    .SECTIONS{
+        margin-top: 40px;
+        align-items: center;
+        justify-content: center;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
 
 
   }
+  @media (min-width: 768px) and (max-width: 991px) {
+   #HouseOne,#HouseTwo,#HouseThree{
+    width: 90%;
+   }
+   .SOLARTITLE p{
+    font-weight: 500;
+    font-size: 13px;
+    margin: 5px;
+}
+.SECTIONS{
+  margin: 30px;
+}
+.LL{
+    margin: 10px 0;
+}
+
+
+  }
+  
