--- a/src/assets/COMOPONANTS/trade.css
+++ b/src/assets/COMOPONANTS/trade.css
@@ -62,4 +62,28 @@
       order: 1; /* تغيير الترتيب */
     }
   }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .Section-right {
+      order: -1; /* تغيير الترتيب */
+    }
+  #instd{
+    display: flex;
+    width: 100%;
+
+  }
+  .IMGTWICE{
+    /* display: none; */
+    background-position: center;
+    width: 80%;
+  }
+
+    .Section-left {
+      order: 1; /* تغيير الترتيب */
+    }
+
+
+
+
+  }
+  
   
