--- a/src/assets/COMOPONANTS/solar.css
+++ b/src/assets/COMOPONANTS/solar.css
@@ -9,6 +9,11 @@
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
 
 }
+.image.enlarged {
+    transform: scale(1.5);
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
+    z-index: 10;
+}
 .SOLARTITLE h4{
 color: #000;
 font-weight: 600;
@@ -31,6 +36,15 @@ font-size: 27px;
  font-size: 15px;
 
 }
+.highlight {
+    transform: scale(1.2);
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
+    transition: 0.5s;
+    z-index: 1000;
+    position: relative;
+    overflow: hidden;
+}
+
 @media (max-width: 768px) {
     
     .LL{
@@ -72,4 +86,3 @@ font-size: 27px;
 
 
   }
-  
