--- a/src/assets/COMOPONANTS/solar.css
+++ b/src/assets/COMOPONANTS/solar.css
@@ -56,6 +56,14 @@ font-size: 27px;
         margin: 0;
 
     }
+    .highlight {
+        transform: scale(1.1);
+        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
+        transition: 0.5s;
+        z-index: 1000;
+        position: relative;
+        overflow: hidden;
+    }
     .SECTIONS{
         margin-top: 40px;
         align-items: center;
